# RpiComponents

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
client/: CMakeLists.txt  Client.cpp  QmlLoader.cpp  RpiConnector.cpp  RpiConnector.hpp  ThunderDistanceListener.hpp  ThunderPlugin.cpp  ThunderPlugin.hpp  qmldir  test.qml
client/apps/: CMakeLists.txt  QmlLoader.cpp
client/deprecated/: Client.cpp
client/qmlmodules/: CMakeLists.txt
client/qmlmodules/Thunder/: CMakeLists.txt  ThunderListener.cpp  ThunderListener.hpp  ThunderPlugin.cpp  ThunderPlugin.hpp
client/qmlmodules/Video/: CMakeLists.txt  GstreamerPipelineRunner.cpp  GstreamerPipelineRunner.h  VideoDevicesPoll.cpp  VideoDevicesPoll.h  VideoPlugin.cpp  VideoPlugin.h  qmldir
client/qmlmodules/Video/tests/: Button.qml  CameraView.qml  main.qml
common/: Operator.hpp  PIDcontroller.hpp  Singleton.hpp  definitions.hpp
qml/: path-recognition.qml  test.qml
server/: CMakeLists.txt  DistanceSensor.hpp  Environment.hpp  Hardware.hpp  Machine.cpp  Machine.hpp  Motor.cpp  Motor.hpp  Operator.hpp  RotationStation.cpp  RotationStation.hpp  Server.cpp  Servo.cpp  Servo.hpp  StatisticsOperator.cpp  StatisticsOperator.hpp
server/dc-engine/: CMakeLists.txt  DC_ENG.hpp  example.cpp
server/l298n/: CMakeLists.txt  L298N.cpp  L298N.hpp  example.cpp
server/light/: CMakeLists.txt  Light.hpp  example.cpp
server/mpu6050/: CMakeLists.txt  Example.cpp  Example2.cpp  MPU6050.cpp  MPU6050.h
server/sr04/: CMakeLists.txt  SR04.cpp  SR04.hpp  example.cpp
test_path_detection/: Autopilot.hpp  CMakeLists.txt  Environment.cpp  Environment.hpp  PathExploration.cpp  PathExploration.hpp  Robot.cpp  Robot.hpp  qmldir
